# Simple-rust-rest-api

./: Cargo.toml  data.sqlite
src/: main.rs
