[package]
edition = "2021"
name = "web-api"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.6"
rocket_contrib = {version = "0.4.10", features = ["json"]}
rusqlite = {version = "0.26.3", features = ["bundled"]}
serde = {version = "1.0.132", features = ["derive"]}
serde_json = "1.0.73"
